# hybrid_agents_bmad_n8n

./: .env.example  .gitignore  README.md  pyproject.toml
agents/fused/: n8n_architect.md  n8n_developer.md
project_plans/: template_project_plan.yml
scripts/: cli.py  mcp_sanity_check.py  service_matrix.py
src/: agent_runner.py  log_utils.py  main.py  mcp_client.py  orchestrator.py
tests/simulations/: mcp_responses.json
workflows/: greenfield-n8n-workflow.yaml  my_workflow.yaml
